--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div style="display:flex; justify-content:center; align-items:center; padding:150px 0px 50px 0px">
+    <div class="content" style="display:flex; justify-content:center; align-items:center; padding:150px 0px 50px 0px">
         <div class="container">
 
             <div class="msgerrorContainer"></div>
