--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <input type="number" class="hourWage" placeholder="שכר לשעה">
             <input type="number" class="hoursDay" placeholder="שעות יום">
             <input type="number" class="days" placeholder="ימים">
+            <input type="number" class="points" placeholder="נ'ק זיכוי" value="2.25">
             <button type="button" class="btn">חשב</button>
             <div class="message2"></div>
 
